<resources>
    <string name="app_name">1</string>
    <string name="back_button">Back</string>
    <string name="food">Food</string>
    <string name="transport">Transport</string>
    <string name="medicine">Medicine</string>
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="transfer">Transfer</string>
    <string name="categories">Categories</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="rent">rent\n</string>
</resources>